# scrigen

./: Cargo.toml  README.md
src/: blog_post.rs  main.rs  page.rs  static_page.rs
